# gitdiagram

./: package.json
backend/: package.json  pyproject.toml
backend/tests/: conftest.py
src/app/browse/: page.tsx
src/server/storage/: config.ts  r2.ts  upstash.ts
