[project]
name = "gitdiagram-backend"
version = "0.1.0"
description = "FastAPI backend for GitDiagram"
requires-python = ">=3.14,<3.15"
dependencies = [
  "api-analytics==1.2.7",
  "boto3==1.43.1",
  "fastapi==0.136.1",
  "openai==2.33.0",
  "pyjwt[crypto]==2.12.1",
  "python-dotenv==1.2.2",
  "requests==2.33.1",
  "uvicorn[standard]==0.46.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "pytest==9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
